Adapt to current IDEA version

--- a/build.xml
+++ b/build.xml
@@ -101,6 +101,7 @@
         <pathelement location="${javac2.home}/jdom.jar"/>
         <pathelement location="${javac2.home}/asm.jar"/>
         <pathelement location="${javac2.home}/asm-commons.jar"/>
+        <pathelement location="${javac2.home}/asm4-all.jar"/>
         <pathelement location="${javac2.home}/jgoodies-forms.jar"/>
     </path>
     <target name="register.custom.compilers">
