--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <packaging>pom</packaging>
   <properties>
-    <teamcity-version>8.0</teamcity-version>
+    <teamcity-version>9.1-SNAPSHOT</teamcity-version>
     <idea-version>95.677</idea-version>
   </properties>
   <repositories>
